<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dvs.occasus.SetToggles">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_toggles"
        android:id="@+id/set_toggles"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:gravity="center"
        android:background="#fffffb1d" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_toggles"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp"
        android:id="@+id/grid_Layout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sound_toggles"
            android:id="@+id/sound_toggles"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="sound_toggles"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/system_toggles"
            android:id="@+id/system_toggles"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="system_toggles"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/urgent_sms"
            android:id="@+id/urgent_sms"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="send_message"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contacts_exception"
            android:id="@+id/contacts_exception"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="contacts_exception"/>
    </GridLayout>


</RelativeLayout>
