<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dvs.occasus.SystemToggles">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi"
        android:id="@+id/wifi_button"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/shut_down_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/mobile_data_button"
        android:layout_alignEnd="@+id/mobile_data_button"
        android:onClick="wifi_settings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth"
        android:id="@+id/bluetooth_button"
        android:layout_alignTop="@+id/wifi_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/shut_down_button"
        android:layout_toRightOf="@+id/shut_down_button"
        android:onClick="bluetooth_settings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_data"
        android:id="@+id/mobile_data_button"
        android:layout_below="@+id/wifi_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp"
        android:onClick="mobiledata_settings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silent"
        android:id="@+id/silent_button"
        android:layout_alignBottom="@+id/mobile_data_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/bluetooth_button"
        android:layout_alignStart="@+id/bluetooth_button"
        android:onClick="silent_settings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shut_down"
        android:id="@+id/shut_down_button"
        android:layout_marginTop="72dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="shutdown_settings"/>
</RelativeLayout>
